testdata/parser/negative/1.txt
Parse error at 1.pdl:7:4: Illegal nested synchronous statement
			synchronous {}
			^
